# futurecasapy

./: README.rst  build.py  pyproject.toml  setup.py
futurecasapy/tests/: conftest.py  test_table.py
src/: pytable.cpp  type_converters.h
tests/: test_futurecasapy.py
