[tool.poetry]
name = "futurecasapy"
build = "build.py"
version = "0.1.0"
description = ""
authors = ["Simon Perkins <simon.perkins@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
numpy = "^1.19.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pybind11 = "^2.6.1"

[build-system]
requires = ["poetry-core>=1.0.0", "pybind11"]
build-backend = "poetry.core.masonry.api"
